deploy/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/part-of: github-release-notification
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: subscription
                port:
                  name: http
          - path: /mail
            pathType: Prefix
            backend:
              service:
                name: mailpit
                port:
                  name: http
